// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar should have transparent background 1`] = `
<nav
  className="navbar navbar_transparent"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Logo
    background={false}
  />
  <div
    className="navbar__link-container"
  >
    <Tasks
      smallScreen={false}
      tasks={Array []}
    />
    <Links
      links={
        Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ]
      }
      smallScreen={false}
    />
  </div>
</nav>
`;

exports[`navbar should show background 1`] = `
<nav
  className="navbar navbar_default"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <Logo
    background={true}
  />
  <div
    className="navbar__link-container"
  >
    <Tasks
      smallScreen={false}
      tasks={Array []}
    />
    <Links
      links={
        Array [
          Object {
            "route": "/analysis",
            "text": "analysis",
          },
          Object {
            "route": "/help",
            "text": "help",
          },
        ]
      }
      smallScreen={false}
    />
  </div>
</nav>
`;
